fixed contacts page spacing and headers

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ a {
   margin-top: 0px;
   padding-top: 1px;
   width: 50%;
+  line-height: 25px;
 
 }
 
